# pacstaller-cli

./: .gitignore  CMakeLists.txt  PKGBUILD  pacstaller.cpp  pacstallerconfig.h.in
.cache/clangd/index/: pacstaller.cpp.042C02ACDFA8297C.idx  pacstallerconfig.h.D0E8E1F264C9BEAE.idx
